# ppt-analyse

./: .env.example  .gitignore  README.md  agent.md  pyproject.toml  requirements.txt  skill.md  start.sh  stop.sh
frontend/: app.js  index.html  style.css
skill/: ppt.py
skill/services/: pdf_reader.py  ppt_reader.py
src/: config.py  main.py  mcp_server.py
src/analyzer/: difficulty.py  json_utils.py  knowledge.py  learning_agent.py  llm_client.py  pdf_generator.py  qa.py  quiz.py  socratic_tutor.py  summarizer.py
src/models/: schemas.py
src/parser/: pdf_parser.py  pptx_parser.py
tests/: test_api.py  test_parser.py
uploads/: e4b8e6cf-e90b-4d4b-9997-a20ffdab3d4d.pptx
